...
  <string name="onboarding_activity_title">Introduction</string>
  <string name="frequently_asked_questions_FAQ">Frequently Asked Questions (FAQs)</string>
  <string name="info">Info</string>
  <string name="learn">Learn</string>
  <string name="practice">Practice</string>
  <string name="study">Study</string>
  <string name="administrator_controls_title">Administrator Controls</string>
  <string name="topic_page">Topic page</string>
  <string name="topic_name">Topic: %s</string>
  <string name="topic">Topic</string>
  <string name="ongoing_topic_list_activity_title">Topics in Progress</string>
  <string name="topic_story_progress_percentage">%s\%%</string>
  <string name="topic_play_chapter_index">%s</string>
...
  <string name="back_button">Back Button</string>
  <string name="next">Next</string>
  <!-- ProfileAndDeviceIDsActivity -->
  <string name="learner_analytics_label_text">Learner Study Analytics</string>
  <!-- AdministratorControlsFragment -->
  <string name="administrator_controls_general_label">General</string>
  <string name="administrator_controls_edit_account">Edit account</string>
  <string name="administrator_controls_profile_management_label">Profile Management</string>
  <string name="administrator_controls_edit_profiles">Edit profiles</string>
  <string name="administrator_controls_download_permissions_label">Download Permissions</string>
  <string name="administrator_controls_update_on_wifi_title">Download and update only on Wi-fi</string>
  <string name="administrator_controls_update_on_wifi_message">Topics will be downloaded and updated only on Wi-fi. Any downloads or updates of cellular data will be queued.</string>
  <string name="administrator_controls_auto_update_title">Automatically update topics</string>
  <string name="administrator_controls_auto_update_message">Downloaded topics that have new content available will automatically update.</string>
  <string name="administrator_controls_app_information_label">App Information</string>
  <string name="administrator_controls_app_version">App Version</string>
  <string name="administrator_controls_account_actions_label">Account Actions</string>
  <string name="administrator_controls_log_out">Log Out</string>
  <string name="log_out_dialog_cancel_button">Cancel</string>
  <string name="log_out_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="log_out_dialog_message">Are you sure you want to log out of your profile?</string>
  <!-- AppVersionFragment -->
  <string name="app_version_label">App Version</string>
  <string name="app_version_name">%s</string>
  <string name="app_last_update_date">The last update was installed on %s. Please share the above version when sending feedback about bugs.</string>
  <string name="app_version_activity_title">App Version</string>
  <string name="copy_app_version">Copy app version</string>
...
